# mattermost-digest

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  digest.rs  error.rs  gemini.rs  gmail.rs  main.rs  mattermost.rs  models.rs  system_status.rs  telegram.rs  telegram_commands.rs  telegram_format.rs
