[package]
name = "mattermost-digest"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
google-gmail1 = "7.0.0"
indicatif = "0.18.4"
mime = "0.3.17"
pulldown-cmark = "0.13.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yup-oauth2 = { version = "12", features = ["hyper-rustls"] }
